@@ -11,7 +11,6 @@ pipeline {
             }
         }
         stage('Rodar testes funcionais em paralelo') {
-            withEnv(['MAVEN_OPTS=--add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED'])
             steps {
                 sh 'mvn verify -Dthreads=8'
             }
